--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   "devDependencies": {
     "express": "^4.17.1",
     "grunt": "^1.3.0",
-    "grunt-autoprefixer": "^3.0.4",
+    "grunt-autoprefixer": "^3.0.0",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-connect": "^2.1.0",
     "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-jshint": "^3.2.0",
     "grunt-contrib-qunit": "^3.1.0",
     "grunt-contrib-uglify": "^4.0.1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.1.0",
-    "grunt-zip": "~0.18.2",
+    "grunt-zip": "^0.14.0",
     "load-grunt-tasks": "^5.1.0",
     "mustache": "^3.2.1",
     "node-sass": "^7.0.0",
@@ -38,8 +38,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "gulp-sass": "^4.1.0",
-    "npm": "^6.14.8",
+    "gulp-sass": "^5.1.0",
+    "npm": "^8.19.2",
     "shelljs": "^0.8.4"
   },
   "bugs": {
